// proto 파일 (hello.proto)
syntax = "proto3";

package hello; // 이 줄 추가

service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
